# Survey-Search

./: .gitignore  .rsconnectignore  Data_Clean.py  LICENSE  README.md  RoPE_Surveys.py  Scraper1.py  app.py  main.py  pyproject.toml  requirements.txt
basic-app/: app.py
data/: ces_shiny_data.csv
rsconnect-python/: Survey-Search.json
