[project]
name = "survey-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "shiny>=1.4.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "torch>=2.2.2",
    "torchvision>=0.17.2",
    "torchaudio>=2.2.2"
]

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]
torchvision = [
    { index = "pytorch", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/torch_stable.html"
explicit = true
